--- a/pipewire/pipewire.conf.d/MusicVD.conf
+++ b/pipewire/pipewire.conf.d/MusicVD.conf
@@ -1,19 +1,20 @@
 context.modules = [
-    {   name = libpipewire-module-loopback
-        args = {
-            audio.position = [ FL FR ]
-            capture.props = {
-                media.class = Audio/Sink
-                node.name = "Music.Sink"
-                node.description = "Music"
-            }
-            playback.props = {
-                node.name = "Music.Sink.Output"
-		node.description = "Music"
-                node.passive = true
-                target.object = "EQ.Sink"
-            }
-        }
-    }
+	{
+		name = libpipewire-module-loopback
+		args = {
+			audio.position = [ FL FR ]
+			capture.props = {
+				media.class = Audio/Sink
+				node.name = "Music.Sink"
+				node.description = "Music"
+			}
+			playback.props = {
+				node.name = "Music.Sink.Output"
+				node.description = "Music"
+				node.passive = true
+				target.object = "EQ.Sink"
+			}
+		}
+	}
 ]
 
