--- a/wireplumber/wireplumber.conf.d/USBPnPMic.conf
+++ b/wireplumber/wireplumber.conf.d/USBPnPMic.conf
@@ -1,18 +1,16 @@
 monitor.alsa.rules = [
-  {
-    matches = [
-      {
-        # This matches the value of the 'device.name' property of the device.
-        device.name = "alsa_card.usb-0c76_USB_PnP_Audio_Device-00"
-      }
-    ]
-    actions = {
-      update-props = {
-        api.alsa.soft-mixer = true
-	audio.format = "F32LE"
-	audio.rate = 96000
-      }
-    }
-  }
+	{
+		matches = [	
+			# This matches the value of the 'device.name' property of the device.
+			{ device.name = "alsa_card.usb-0c76_USB_PnP_Audio_Device-00" }
+		]
+		actions = {
+			update-props = {
+				api.alsa.soft-mixer = true
+				audio.format = "F32LE"
+				audio.rate = 96000
+			}
+		}
+	}
 ]
 
