--- a/pipewire/pipewire-pulse.conf.d/firefox.conf
+++ b/pipewire/pipewire-pulse.conf.d/firefox.conf
@@ -1,15 +1,14 @@
 stream.rules = [
-    {
-        matches = [
-            {
-                # all keys must match the value. ! negates. ~ starts regex.
-                application.process.binary = "firefox"
-            }
-        ]
-        actions = {
-            update-props = {
-		target.object = "Browser.Sink"
-            }
-        }
-    }
+	{
+		matches = [
+			# all keys must match the value. ! negates. ~ starts regex.
+			{ application.process.binary = "firefox" }
+	
+		]
+		actions = {
+			update-props = {
+				target.object = "Browser.Sink"
+			}
+		}
+	}
 ]
