--- a/pipewire/pipewire.conf.d/TestVD.conf.example
+++ b/pipewire/pipewire.conf.d/TestVD.conf.example
@@ -1,19 +1,20 @@
 context.modules = [
-    {   name = libpipewire-module-loopback
-        args = {
-            audio.position = [ FL FR ]
-            capture.props = {
-                media.class = Audio/Sink
-                node.name = "my_sink"
-                node.description = "my-sink"
-            }
-            playback.props = {
-                node.name = "my_sink"
-		node.description = "my-sink"
-                node.passive = true
-                target.object = "my-default-sink"
-            }
-        }
-    }
+	{
+		name = libpipewire-module-loopback
+		args = {
+			audio.position = [ FL FR ]
+			capture.props = {
+				media.class = Audio/Sink
+				node.name = "my_sink"
+				node.description = "my-sink"
+			}
+			playback.props = {
+				node.name = "my_sink"
+				node.description = "my-sink"
+				node.passive = true
+				target.object = "my-default-sink"
+			}
+		}
+	}
 ]
 
